# cmkl-sec-302-assignment-2

./: README.md  fminist_convnet.keras  fminist_convnet_2.keras  pyproject.toml  task_a.ipynb  task_b.ipynb
